--- a/src/demo/views/pages/ui.html
+++ b/src/demo/views/pages/ui.html
@@ -241,7 +241,7 @@
                                 <span class="g-radio-text">否</span>
                             </label>
                         </div>
-                        <div class="g-form-footer-item g-font-color-warning">
+                        <div class="g-form-footer-item g-font-color_warning">
                             <div class="g-margin-right-5">建议尺寸：</div>
                             <div>640*640（这里是补充信息，对此项进行补充说明）。</div>
                         </div>
