--- a/src/ui/scss/components/g-jump-guide.scss
+++ b/src/ui/scss/components/g-jump-guide.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
     height: px2rem(30);
     padding: 0 px2rem(10);
-    font-size: px2rem($g-font-size-default);
+    font-size: px2rem($g-font-size_default);
     .g-jump-guide-item {
         display: flex;
         align-items: center;
