--- a/src/ui/scss/components/g-loading.scss
+++ b/src/ui/scss/components/g-loading.scss
@@ -14,7 +14,7 @@
         align-items: center;
         justify-content: center;
         position: relative;
-        color: $g-font-color-default;
+        color: $g-font-color_default;
         padding: px2rem(20) 0;
         box-sizing: border-box;
     }
