--- a/src/ui/scss/components/g-message.scss
+++ b/src/ui/scss/components/g-message.scss
@@ -35,7 +35,7 @@
     .g-message-icon {
         margin-right: px2rem(10);
         font-size: px2rem(24);
-        color: $g-warning-color;
+        color: $g-color_warning;
     }
     .g-message-text {
         font-size: px2rem(14);
