--- a/src/ui/scss/components/g-textarea.scss
+++ b/src/ui/scss/components/g-textarea.scss
@@ -16,5 +16,5 @@ textarea.g-textarea {
     height: px2rem(60);
     background: #ffffff;
     padding: px2rem(10);
-    border: px2rem(1) solid $g-border-color-default;
+    border: px2rem(1) solid $g-border-color_default;
 }
