--- a/src/ui/scss/components/g-title.scss
+++ b/src/ui/scss/components/g-title.scss
@@ -9,7 +9,7 @@
         display: block;
         width: px2rem(10);
         height: 1px;
-        background: $g-ignore-color;
+        background: $g-color_ignore;
         border-radius: px2rem(20);
         transition: 0.4s;
         margin: 0 px2rem(10);
