--- a/src/ui/scss/tools/g-tools.scss
+++ b/src/ui/scss/tools/g-tools.scss
@@ -1,22 +1,22 @@
 /* 字体颜色 */
 .g-font-color_highlight {
-    color: $g-highlight-color !important;
+    color: $g-color_highlight !important;
 }
 
 .g-font-color_success {
-    color: $g-success-color !important;
+    color: $g-color_success !important;
 }
 
 .g-font-color_warning {
-    color: $g-warning-color !important;
+    color: $g-color_warning !important;
 }
 
 .g-font-color_danger {
-    color: $g-danger-color !important;
+    color: $g-color_danger !important;
 }
 
 .g-font-color_ignore {
-    color: $g-ignore-color !important;
+    color: $g-color_ignore !important;
 }
 
 .g-font-color_white {
