--- a/src/ui/scss/components/g-button.scss
+++ b/src/ui/scss/components/g-button.scss
@@ -1,8 +1,8 @@
 // 默认按钮(确认按钮)
 .g-button {
-    font-size: px2rem($g-font-size-default);
+    font-size: px2rem($g-font-size_default);
     height: px2rem(40);
-    background: $g-highlight-color;
+    background: $g-color_highlight;
     color: #ffffff;
     display: flex;
     align-items: center;
@@ -12,41 +12,41 @@
     // 默认按钮(确认按钮)空心的
     &.g-button_hollow {
         background: transparent;
-        border: 1px solid $g-highlight-color;
-        color: $g-highlight-color;
+        border: 1px solid $g-color_highlight;
+        color: $g-color_highlight;
     }
     // 取消按钮
     &.g-button_cancel {
-        background: $g-background-color-default;
+        background: $g-background-color_default;
         // 取消按钮空心的
         &.g-button_hollow {
             background: transparent;
-            border: 1px solid $g-border-color-default;
-            color: $g-font-color-default;
+            border: 1px solid $g-border-color_default;
+            color: $g-font-color_default;
         }
 
     }
     // 新建按钮
     &.g-button_create {
-        background: $g-create-color;
+        background: $g-color_create;
         color: #ffffff;
         // 新建按钮空心的
         &.g-button_hollow {
             background: transparent;
-            border: 1px solid $g-create-color;
-            color: $g-create-color;
+            border: 1px solid $g-color_create;
+            color: $g-color_create;
         }
     }
     // 禁用按钮
     &.g-button_disabled {
-        background: $g-background-color-disabled;
-        color: $g-font-color-disabled;
+        background: $g-background-color_disabled;
+        color: $g-font-color_disabled;
         cursor: not-allowed;
         // 禁用按钮空心的
         &.g-button_hollow {
             background: transparent;
-            border: 1px solid $g-border-color-disabled;
-            color: $g-font-color-disabled;
+            border: 1px solid $g-border-color_disabled;
+            color: $g-font-color_disabled;
         }
     }
     // 默认按钮小按钮
