--- a/src/ui/scss/components/g-form-wrap.scss
+++ b/src/ui/scss/components/g-form-wrap.scss
@@ -3,7 +3,7 @@
     &.g-form-wrap_no-margin {
         .g-form {
             &:first-of-type {
-                border-top: 1px solid $g-border-color-default;
+                border-top: 1px solid $g-border-color_default;
             }
             margin-bottom: 0;
             .g-form-body {
@@ -16,13 +16,13 @@
         $text-width: 100;
         position: relative;
         margin-bottom: px2rem(10);
-        font-size: px2rem($g-font-size-default);
+        font-size: px2rem($g-font-size_default);
         &:last-of-type {
             margin-bottom: 0;
         }
         .g-form-body {
             display: flex;
-            border: 1px solid $g-border-color-default;
+            border: 1px solid $g-border-color_default;
             border-left: none;
             border-right: none;
             .g-form-body-text {
@@ -34,7 +34,7 @@
                 text-align: right;
                 background: #ffffff;
                 & + .g-form-body-content {
-                    border-left: 1px solid $g-border-color-default;
+                    border-left: 1px solid $g-border-color_default;
                 }
             }
             .g-form-body-content {
@@ -122,14 +122,14 @@
                 }
                 /* 图标提示色 */
                 .g-form-body-content-hint {
-                    color: $g-danger-color;
+                    color: $g-color_danger;
                 }
             }
         }
         .g-form-footer {
             padding: 0 px2rem(10) 0 px2rem($text-width + 10);
             background: #ffffff;
-            border-bottom: 1px solid $g-border-color-default;
+            border-bottom: 1px solid $g-border-color_default;
             .g-form-footer-item {
                 &:last-of-type {
                     padding-bottom: px2rem(10);
