--- a/src/ui/scss/components/g-list-wrap.scss
+++ b/src/ui/scss/components/g-list-wrap.scss
@@ -9,7 +9,7 @@
     &.g-list-wrap_style-no-margin {
         .g-list {
             margin-bottom: 0;
-            border-bottom: px2rem(1) solid $g-border-color-default;
+            border-bottom: px2rem(1) solid $g-border-color_default;
             &:last-child {
                 border-bottom: none;
             }
@@ -32,14 +32,14 @@
                 height: px2rem($size);
                 font-size: px2rem($size);
                 margin-right: px2rem(10);
-                color: $g-highlight-color;
+                color: $g-color_highlight;
             }
             .g-list-body-text {
                 font-size: px2rem(12);
             }
             .g-list-body-value {
                 font-size: px2rem(12);
-                color: $g-ignore-color;
+                color: $g-color_ignore;
             }
             .g-list-body-icon {
                 $size: 14;
@@ -50,7 +50,7 @@
         .g-list-footer {
             font-size: px2rem(12);
             line-height: 1.3;
-            color: $g-ignore-color;
+            color: $g-color_ignore;
             text-align: justify;
         }
         &:last-child {
