--- a/src/ui/scss/components/g-pagination.scss
+++ b/src/ui/scss/components/g-pagination.scss
@@ -21,7 +21,7 @@
         height: inherit;
         padding: 0 px2rem(5);
         &.g-pagination-btn-inactive {
-            color: $g-font-color-disabled;
+            color: $g-font-color_disabled;
             opacity: 0.6;
         }
     }
