--- a/src/ui/scss/components/g-quick-enter.scss
+++ b/src/ui/scss/components/g-quick-enter.scss
@@ -7,9 +7,9 @@
     font-size: px2rem(12);
     overflow: hidden;
     .g-quick-enter-item {
-        color: $g-ignore-color;
+        color: $g-color_ignore;
         padding: px2rem(4) px2rem(6);
-        border: px2rem(1) solid $g-border-color-default;
+        border: px2rem(1) solid $g-border-color_default;
         margin: px2rem(2);
         background: #ffffff;
         border-radius: px2rem(2000);
