--- a/src/ui/scss/components/g-select.scss
+++ b/src/ui/scss/components/g-select.scss
@@ -11,7 +11,7 @@
     width: 100%;
     height: px2rem(40);
     background: #ffffff;
-    border: px2rem(1) solid $g-border-color-default;
+    border: px2rem(1) solid $g-border-color_default;
     // 小的选择框
     &.g-select_small {
         height: px2rem(30);
