--- a/src/ui/scss/components/g-upload.scss
+++ b/src/ui/scss/components/g-upload.scss
@@ -3,7 +3,7 @@
     $width-height: 80;
     width: px2rem($width-height);
     height: px2rem($width-height);
-    border: px2rem(1) dashed $g-highlight-color;
+    border: px2rem(1) dashed $g-color_highlight;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     position: relative;
     display: flex;
@@ -11,7 +11,7 @@
     flex-direction: column;
     justify-content: center;
     box-sizing: border-box;
-    color: $g-highlight-color;
+    color: $g-color_highlight;
     overflow: hidden;
     .g-upload-input {
         position: absolute;
