--- a/src/ui/scss/reset/g-reset.scss
+++ b/src/ui/scss/reset/g-reset.scss
@@ -1,7 +1,7 @@
 // 重置字体
 .g-reset_font {
-    font: px2rem($g-font-size-default) "iconfont";
-    color: px2rem($g-font-color-default);
+    font: px2rem($g-font-size_default) "iconfont";
+    color: px2rem($g-font-color_default);
     line-height: 1;
 }
 
