--- a/src/demo/views/pages/ui.html
+++ b/src/demo/views/pages/ui.html
@@ -225,8 +225,8 @@
                     </div>
                     <div class="g-form-footer">
                         <div class="g-form-footer-item">
-                            <div class="g-margin-right-5">是否显示：</div>
-                            <label class="g-radio g-margin-right-10">
+                            <div class="g-margin-right_5">是否显示：</div>
+                            <label class="g-radio g-margin-right_10">
                                         <span class="g-radio-body">
                                             <input checked="checked" title="" class="g-radio-body-main" type="radio" name="is-show" value="yes">
                                             <span class="g-radio-body-mark g-iconfont g-icon-radio"></span>
@@ -242,7 +242,7 @@
                             </label>
                         </div>
                         <div class="g-form-footer-item g-font-color_warning">
-                            <div class="g-margin-right-5">建议尺寸：</div>
+                            <div class="g-margin-right_5">建议尺寸：</div>
                             <div>640*640（这里是补充信息，对此项进行补充说明）。</div>
                         </div>
                     </div>
@@ -272,52 +272,52 @@
                 </div>
             </div>
             <div class="g-title">布局组件 - 按钮系列</div>
-            <div class="g-display-flex g-align-items-center g-margin-top-10">
-                <input class="g-button g-button_small g-margin-right-10" type="submit" value="submit">
-                <div class="g-button g-button_small g-button_disabled g-margin-right-10">禁用</div>
-                <div class="g-button g-button_small g-button_cancel g-margin-right-10">取消</div>
-                <div class="g-button g-button_small g-button_create g-margin-right-10">
+            <div class="g-display_flex g-align-items_center g-margin-top_10">
+                <input class="g-button g-button_small g-margin-right_10" type="submit" value="submit">
+                <div class="g-button g-button_small g-button_disabled g-margin-right_10">禁用</div>
+                <div class="g-button g-button_small g-button_cancel g-margin-right_10">取消</div>
+                <div class="g-button g-button_small g-button_create g-margin-right_10">
                     <div class="g-button-icon g-iconfont g-icon-plus"></div>
                     <div class="g-button-text">新建</div>
                 </div>
                 <div class="g-button g-button_small js-save">保存</div>
             </div>
-            <div class="g-display-flex g-align-items-center g-margin-top-10">
-                <input class="g-button g-margin-right-10" type="submit" value="submit">
-                <div class="g-button g-button_disabled g-margin-right-10">禁用</div>
-                <div class="g-button g-button_cancel g-margin-right-10">取消</div>
-                <div class="g-button g-button_create g-margin-right-10">
+            <div class="g-display_flex g-align-items_center g-margin-top_10">
+                <input class="g-button g-margin-right_10" type="submit" value="submit">
+                <div class="g-button g-button_disabled g-margin-right_10">禁用</div>
+                <div class="g-button g-button_cancel g-margin-right_10">取消</div>
+                <div class="g-button g-button_create g-margin-right_10">
                     <div class="g-button-icon g-iconfont g-icon-plus"></div>
                     <div class="g-button-text">新建</div>
                 </div>
                 <div class="g-button js-save">保存</div>
             </div>
-            <div class="g-display-flex g-align-items-center g-margin-top-10">
-                <input class="g-button g-button_hollow g-button_small g-margin-right-10" type="submit" value="submit">
-                <div class="g-button g-button_hollow g-button_small g-button_disabled g-margin-right-10">禁用</div>
-                <div class="g-button g-button_hollow g-button_small g-button_cancel g-margin-right-10">取消</div>
-                <div class="g-button g-button_hollow g-button_small g-button_create g-margin-right-10">
+            <div class="g-display_flex g-align-items_center g-margin-top_10">
+                <input class="g-button g-button_hollow g-button_small g-margin-right_10" type="submit" value="submit">
+                <div class="g-button g-button_hollow g-button_small g-button_disabled g-margin-right_10">禁用</div>
+                <div class="g-button g-button_hollow g-button_small g-button_cancel g-margin-right_10">取消</div>
+                <div class="g-button g-button_hollow g-button_small g-button_create g-margin-right_10">
                     <div class="g-button-icon g-iconfont g-icon-plus"></div>
                     <div class="g-button-text">新建</div>
                 </div>
                 <div class="g-button g-button_hollow g-button_small js-save">保存</div>
             </div>
-            <div class="g-display-flex g-align-items-center g-margin-top-10">
-                <input class="g-button g-button_hollow g-margin-right-10" type="submit" value="submit">
-                <div class="g-button g-button_hollow g-button_disabled g-margin-right-10">禁用</div>
-                <div class="g-button g-button_hollow g-button_cancel g-margin-right-10">取消</div>
-                <div class="g-button g-button_hollow g-button_create g-margin-right-10">
+            <div class="g-display_flex g-align-items_center g-margin-top_10">
+                <input class="g-button g-button_hollow g-margin-right_10" type="submit" value="submit">
+                <div class="g-button g-button_hollow g-button_disabled g-margin-right_10">禁用</div>
+                <div class="g-button g-button_hollow g-button_cancel g-margin-right_10">取消</div>
+                <div class="g-button g-button_hollow g-button_create g-margin-right_10">
                     <div class="g-button-icon g-iconfont g-icon-plus"></div>
                     <div class="g-button-text">新建</div>
                 </div>
                 <div class="g-button g-button_hollow js-save">保存</div>
             </div>
-            <div class="g-display-flex g-align-items-center g-margin-top-10">
-                <div class="g-button g-button_small g-button_create g-margin-right-10 g-flex-0">
+            <div class="g-display_flex g-align-items_center g-margin-top_10">
+                <div class="g-button g-button_small g-button_create g-margin-right_10 g-flex-0">
                     <div class="g-button-icon g-iconfont g-icon-plus"></div>
                     <div class="g-button-text">新建</div>
                 </div>
-                <div class="g-button g-button_create g-margin-right-10 g-flex-0">
+                <div class="g-button g-button_create g-margin-right_10 g-flex-0">
                     <div class="g-button-icon g-iconfont g-icon-plus"></div>
                     <div class="g-button-text">新建商品</div>
                 </div>
@@ -346,12 +346,12 @@
                 <div class="g-pagination-btn">尾页</div>
             </div>
             <div class="g-title">功能组件 - 弹窗系列</div>
-            <div class="g-display-flex g-align-items-center">
-                <div class="g-button g-button_small g-margin-right-10">g-alert</div>
-                <div class="g-button g-button_small g-margin-right-10">g-confirm</div>
-                <div class="g-button g-button_small g-margin-right-10">g-message</div>
-                <div class="g-button g-button_small g-margin-right-10">g-popover</div>
-                <div class="g-button g-button_small g-margin-right-10">g-tooltip</div>
+            <div class="g-display_flex g-align-items_center">
+                <div class="g-button g-button_small g-margin-right_10">g-alert</div>
+                <div class="g-button g-button_small g-margin-right_10">g-confirm</div>
+                <div class="g-button g-button_small g-margin-right_10">g-message</div>
+                <div class="g-button g-button_small g-margin-right_10">g-popover</div>
+                <div class="g-button g-button_small g-margin-right_10">g-tooltip</div>
             </div>
             <div class="g-title">功能组件 - 排序切换</div>
             <div class="sort-tab"></div>
