--- a/src/ui/scss/components/g-quick-enter.scss
+++ b/src/ui/scss/components/g-quick-enter.scss
@@ -1,5 +1,6 @@
 // 快捷入口
 .g-quick-enter {
+    @extend .g-reset_font;
     display: flex;
     align-items: center;
     justify-content: space-between;
