--- a/src/ui/scss/components/g-star.scss
+++ b/src/ui/scss/components/g-star.scss
@@ -1,5 +1,6 @@
 // 评星
 .g-star {
+    @extend .g-reset_font;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     font-size: 0;
     height: px2rem(40);
