--- a/src/ui/scss/fonts/g-iconfont.scss
+++ b/src/ui/scss/fonts/g-iconfont.scss
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'iconfont';  /* project id 814235 */
-    src: url('//at.alicdn.com/t/font_814235_wvm0vp8fzun.eot');
-    src: url('//at.alicdn.com/t/font_814235_wvm0vp8fzun.eot?#iefix') format('embedded-opentype'),
-    url('//at.alicdn.com/t/font_814235_wvm0vp8fzun.woff') format('woff'),
-    url('//at.alicdn.com/t/font_814235_wvm0vp8fzun.ttf') format('truetype'),
-    url('//at.alicdn.com/t/font_814235_wvm0vp8fzun.svg#iconfont') format('svg');
+    src: url('//at.alicdn.com/t/font_814235_wq6jymlkemb.eot');
+    src: url('//at.alicdn.com/t/font_814235_wq6jymlkemb.eot?#iefix') format('embedded-opentype'),
+    url('//at.alicdn.com/t/font_814235_wq6jymlkemb.woff') format('woff'),
+    url('//at.alicdn.com/t/font_814235_wq6jymlkemb.ttf') format('truetype'),
+    url('//at.alicdn.com/t/font_814235_wq6jymlkemb.svg#iconfont') format('svg');
 }
 
 .g-iconfont {
@@ -14,6 +14,22 @@
     -moz-osx-font-smoothing: grayscale;
     font-size: inherit;
     line-height: 1;
+}
+
+.g-icon-dollar:before {
+    content: "\e6a4";
+}
+
+.g-icon-rmb:before {
+    content: "\e6a3";
+}
+
+.g-icon-tel:before {
+    content: "\e6a7";
+}
+
+.g-icon-search:before {
+    content: "\e648";
 }
 
 .g-icon-sound:before {
