--- a/src/ui/scss/reset/g-reset.scss
+++ b/src/ui/scss/reset/g-reset.scss
@@ -1,3 +1,4 @@
+@import "../config/g-config";
 // 重置字体
 .g-reset_font {
     font: px2rem($g-font-size_default) "Helvetica Neue", "Helvetica", "微软雅黑", "iconfont";
