--- a/src/ui/scss/config/g-config.scss
+++ b/src/ui/scss/config/g-config.scss
@@ -1,44 +1,44 @@
 /*----------【var】----------*/
 // 环境
-$g-is_h5: true; // 是否是h5(默认h5)(可自定义)
+$g-is_h5: true !default; // 是否是h5(默认h5)(可自定义)
 
 // Message，Alert，Confirm。
-$g-message_width: 240;
-$g-alert_width: 260;
-$g-confirm_width: 280;
+$g-message_width: 240 !default;
+$g-alert_width: 260 !default;
+$g-confirm_width: 280 !default;
 @if ($g-is_h5 == false) { // pc
     $g-alert_width: $g-alert_width * 2;
     $g-confirm_width: $g-confirm_width * 2;
 }
 
 // 背景
-$g-background-color_floor: #f4f4f4; // 底色(自定义)
-$g-background-color_default: #bbbbbb; // 默认(自定义)
-$g-background-color_disabled: #e6e6e6; // 禁用(自定义)
-$g-background-color_block: #ffffff; // 内容区块的背景色调(自定义)
+$g-background-color_floor: #f4f4f4 !default; // 底色(自定义)
+$g-background-color_default: #bbbbbb !default; // 默认(自定义)
+$g-background-color_disabled: #e6e6e6 !default; // 禁用(自定义)
+$g-background-color_block: #ffffff !default; // 内容区块的背景色调(自定义)
 
 // 字体
-$g-font-size_default: 12; // 默认字体大小12px(自定义)
-$g-font-color_default: #333333; // 默认(自定义)
-$g-font-color_disabled: #c1c1c1; // 禁用(自定义)
-$g-font-color_auxiliary: #aaaaaa; // 辅助色(自定义)
+$g-font-size_default: 12 !default; // 默认字体大小12px(自定义)
+$g-font-color_default: #333333 !default; // 默认(自定义)
+$g-font-color_disabled: #c1c1c1 !default; // 禁用(自定义)
+$g-font-color_auxiliary: #aaaaaa !default; // 辅助色(自定义)
 
 // 边框
-$g-border-color_default: #e1e1e1; // 默认(自定义)
-$g-border-color_disabled: #e3e3e3; // 禁用(自定义)
+$g-border-color_default: #e1e1e1 !default; // 默认(自定义)
+$g-border-color_disabled: #e3e3e3 !default; // 禁用(自定义)
 
 // 语义
-$g-color_brand: #0089ff; // 品牌色(自定义)
-$g-color_highlight: #0089ff; // 高亮(自定义)，有待思考这个颜色是不是应该就是品牌色待续...
-$g-color_success: #67C23A; // 成功(嫩绿)
-$g-color_warning: #eb9e05; // 警告(鲜橙)
-$g-color_danger: #fa5555; // 危险(艳红)
-$g-color_ignore: #bfbfbf; // 忽视(浅灰)
-$g-color_mask: rgba(0, 0, 0, 0.6); // 遮罩(黑色)
-$g-color_select: #409eff; // 自定义单选按钮和自定义多选按钮等被选中的色调(蓝色)
-$g-color_create: #06bf04; // 新建(创建)的颜色
-$g-color_cancel: #888d99; // 取消的颜色，有待思考命名是否合理待续...
-$g-color_dark: #252834; // 菜单的颜色，有待思考命名是否合理待续...
+$g-color_brand: #0089ff !default; // 品牌色(自定义)
+$g-color_highlight: #0089ff !default; // 高亮(自定义)，有待思考这个颜色是不是应该就是品牌色待续...
+$g-color_success: #67C23A !default; // 成功(嫩绿)
+$g-color_warning: #eb9e05 !default; // 警告(鲜橙)
+$g-color_danger: #fa5555 !default; // 危险(艳红)
+$g-color_ignore: #bfbfbf !default; // 忽视(浅灰)
+$g-color_mask: rgba(0, 0, 0, 0.6) !default; // 遮罩(黑色)
+$g-color_select: #409eff !default; // 自定义单选按钮和自定义多选按钮等被选中的色调(蓝色)
+$g-color_create: #06bf04 !default; // 新建(创建)的颜色
+$g-color_cancel: #888d99 !default; // 取消的颜色，有待思考命名是否合理待续...
+$g-color_dark: #252834 !default; // 菜单的颜色，有待思考命名是否合理待续...
 
 /*----------【function】----------*/
 // px转rem：如果是pc，则按照1比1进行转换，如果是h5，则将320像素宽度的设计图分成10份。
