--- a/src/ui/scss/reset/g-reset.scss
+++ b/src/ui/scss/reset/g-reset.scss
@@ -2,7 +2,7 @@
 
 // 重置字体
 .g-reset_font {
-    font: px2rem($g-font-size_default) "Helvetica Neue", "Helvetica", "微软雅黑", "iconfont";
+    font: px2rem($g-font-size_default) $g-font-family;
     color: px2rem($g-font-color_default);
     line-height: 1;
 }
