--- a/src/ui/scss/commons/g-common.scss
+++ b/src/ui/scss/commons/g-common.scss
@@ -1,9 +1,4 @@
-// 清零样式
-@import "../reset/g-reset";
-// 工具样式
-@import "../tools/g-tools";
-// 字体图标
-@import "../fonts/g-iconfont";
+@import "../base/g-base";
 // 组件样式
 @import "../components/g-input";
 @import "../components/g-select";
